tdf#103103: Many Arabic fonts dont render correctly

Revert the remaining bits of 1da9b4c24e806ad2447b4a656e2a7192755bb6a8,
the rest was reverted in 6323e6628668849438e6e19ba7ad2c6598263261.

This break many assumptions made by GenericSalLayout::ApplyDXArray().

(cherry picked from commit f48cbaac0a2a7278f366a3b0118b399c0a938a44)

Change-Id: I25fbafe06032ab1e8860df6c5932a7157575aa32
Reviewed-on: https://gerrit.libreoffice.org/29698
Reviewed-by: Michael Stahl <mstahl@redhat.com>
Tested-by: Michael Stahl <mstahl@redhat.com>